syntax = "proto3";

package package11;

option java_multiple_files=true;
option java_package= "com.learner.grpc_learning.proto.p11";

message BankRequest{
  int32 accountNumber=1;
}

message BankResponse{
  int32 accountNumber=1;
  int32 balance=2;
}

message WithdrawalRequest{
  int32 account_number=1;
  int32 amount=2;
}

message WithdrawalResponse{
  int32 amount=1;
}

enum ValidationCode{
  UNKNOWN=0;
  INVALID_ACCOUNT=1;
  INVALID_AMOUNT=2;
}

message ErrorMessage{
  ValidationCode error_code=1;
}

service BankService{
  //unary
  rpc getAccountDetails(BankRequest) returns (BankResponse);

  //server streaming
  rpc getWithdrawalAmount(WithdrawalRequest) returns (stream WithdrawalResponse);

}

